@@ -91,6 +91,22 @@ Body.prototype.option = function (o){
 		}
 	}
 	
+	if (o.aliases){
+		var me = this;
+		o.aliases.forEach (function (alias){
+			//Cannot be already defined
+			if (alias === o.long) throw new ArgpError ("The alias name \"" + alias +
+							"\" is already defined");
+			
+			for (var p in me._argp._optionsLong){
+				if (p === alias){
+					throw new ArgpError ("The alias name \"" + alias +
+							"\" is already defined");
+				}
+			}
+		});
+	}
+	
 	this._argp._option (o);
 	
 	return this;
