@@ -152,10 +152,10 @@ Argp.prototype._printHelp = function (){
 		h = s;
 	}else{
 		if (Object.keys (this._options).length){
-			h += " [OPTIONS]";
+			h += " [options]";
 		}
 		if (Object.keys (this._arguments).length){
-			h += " [ARGUMENTS]";
+			h += " [arguments]";
 		}
 		h = wrap ("Usage: " + this._script + h, this._columns, prefix);
 	}
@@ -226,17 +226,32 @@ Argp.prototype._printHelp = function (){
 				if (o.long){
 					line += "-" + o.short + ", --" +
 							(o.flag && o.negate ? "no-" + o.long : o.long);
+					if (o.aliases){
+						o.aliases.forEach (function (alias){
+							line += ", --" + alias;
+						});
+					}
 					if (!o.flag){
 						line += (o.optional ? "[=" + o.argument + "]" : "=" + o.argument);
 					}
 				}else{
 					line += "-" + o.short;
+					if (o.aliases){
+						o.aliases.forEach (function (alias){
+							line += ", --" + alias;
+						});
+					}
 					if (!o.flag){
 						line += (o.optional ? "[" + o.argument + "]" : " " + o.argument);
 					}
 				}
 			}else if (o.long){
 				line += "    --" + (o.flag && o.negate ? "no-" + o.long : o.long);
+				if (o.aliases){
+					o.aliases.forEach (function (alias){
+						line += ", --" + alias;
+					});
+				}
 				if (!o.flag){
 					line += (o.optional ? "[=" + o.argument + "]" : "=" + o.argument);
 				}
@@ -781,6 +796,7 @@ Argp.prototype._option = function (o){
 	o.id = o.long || o.short;
 	o.description = o.description || null;
 	o.hidden = !!o.hidden;
+	o.aliases = o.aliases || null;
 	
 	//Clean up
 	if (o.flag){
@@ -795,6 +811,7 @@ Argp.prototype._option = function (o){
 		o.optional = !!o.optional;
 		o.reviver = o.reviver || null;
 		delete o.negate;
+		
 		if (o.default === undefined){
 			if (o.type === Number){
 				o.default = 0;
@@ -815,6 +832,14 @@ Argp.prototype._option = function (o){
 	//Shortcuts
 	if (o.short) this._optionsShort[o.short] = o;
 	if (o.long) this._optionsLong[o.long] = o;
+	
+	if (o.aliases){
+		var me = this;
+		o.aliases.forEach (function (alias){
+			//Aliases are always long names
+			me._options[alias] = me._optionsLong[alias] = o;
+		});
+	}
 };
 
 Argp.prototype._default = function (){
