@@ -2,6 +2,8 @@ v0.0.10 (xx Sep 2013)
 	The default value of an option is now set with "default" instead of "value".
 	Code inside the "end" event was preventing the instance from being gc'ed.
 	Allowed negated flags with a short name.
+	Added aliases.
+	Minor improvements.
 
 v0.0.9 (20 Sep 2013)
 	Added "columns()".
